--- a/public/en/elements/index.html
+++ b/public/en/elements/index.html
@@ -1571,6 +1571,12 @@ example.com (but not on Github, for example).</p>
 
 
 
+  <script>
+    window.addEventListener("load", (e) => {
+      const lightbox = GLightbox();
+    });
+  </script>
+
 
 <hr>
 <h3 id="gallery">Gallery</h3>
